--- a/Pokedex/app/views/layouts/application.html.erb
+++ b/Pokedex/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-
+    <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
     <script type="text/javascript">
       window.POKEMON_TYPES = <%=raw Pokemon::TYPES %>
     </script>
@@ -17,6 +17,8 @@
       <img src="./assets/pokeball.svg" alt="pokedex">
     </header>
 
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
