--- a/Pokedex/app/assets/stylesheets/static_pages.scss
+++ b/Pokedex/app/assets/stylesheets/static_pages.scss
@@ -1,13 +1,13 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-img {
-  height: 100px;
-  width: 100px;
+.pokedex-image {
+  height: 30px;
+  width: 30px;
 }
 
 main{
-  width: 70%;
+  width: 85%;
   margin: 0 auto;
 }
 
@@ -20,3 +20,32 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
 }
+
+.pokedex{
+  display: flex;
+  flex-direction: row;
+}
+
+.all-pokemon{
+  margin: 5%;
+  width: 30%
+}
+
+.pokemon-detail{
+  margin: 5%;
+  border: 3px solid black;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height:1000px;
+}
+
+.item {
+  width: 50px;
+  height: 50px;
+}
+// .item-image{
+//   width: 200px;
+// }
